[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff_maker"
version = "0.1.0"
description = "A tool to annotate string differences with HTML-like tags"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["diff", "difference", "difflib", "markup", "annotation"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/diff_maker"
"Bug Tracker" = "https://github.com/yourusername/diff_maker/issues"

[tool.setuptools]
packages = ["diff_maker"]
